--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 </div>
                 <div class="contact-action">
                     <a href="https://wa.me/628131554589" target="_blank" class="btn btn-secondary">Chat via WhatsApp</a>
-                    <a href="https://forms.gle/Rvz1YpFZfpGHpJbXA" target="_blank" class="btn btn-primary" style="background:var(--gold); border:none;">Pendaftaran Online</a>
+                    <a href="https://forms.gle/NonWgUJNptmJ2yCg6" target="_blank" class="btn btn-primary" style="background:var(--gold); border:none;">Pendaftaran Online</a>
                 </div>
             </div>
         </div>
@@ -326,3 +326,4 @@
     </script>
 </body>
 </html>
+
